fix page not showing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     border: 0;
     user-select:none;
-    overflow: hidden;
 }
 
 body {
@@ -45,7 +44,6 @@ ul {
 .main-field {
     font-size: 1.7em;
     font-weight: bold;
-    padding: -70px 0;
 }
 
 
@@ -77,7 +75,5 @@ ul {
     #top {
         background-size: cover;
         background-image: url(https://www.loliapi.com/acg/);
-        float: left;
-        width: 100%;
     }
 }
